--- a/catapult/res/values/styles.xml
+++ b/catapult/res/values/styles.xml
@@ -1,4 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.Catapult" parent="Theme.Material3.DayNight.NoActionBar" />
+
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="SmartspaceTextHeadline">
+        <item name="android:textColor">?attr/workspaceTextColor</item>
+        <item name="android:letterSpacing">@dimen/smartspaceLetterSpacing</item>
+        <item name="ambientShadowBlur">@dimen/smartspaceAmbientShadowBlur</item>
+        <item name="ambientShadowColor">?attr/workspaceAmbientShadowColor</item>
+        <item name="keyShadowBlur">@dimen/smartspaceKeyShadowBlur</item>
+        <item name="keyShadowColor">?attr/workspaceKeyShadowColor</item>
+        <item name="keyShadowOffsetX">@dimen/smartspaceKeyShadowOffset</item>
+        <item name="keyShadowOffsetY">@dimen/smartspaceKeyShadowOffset</item>
+    </style>
+
+    <style name="EnhancedSmartspaceTextSubtitle" parent="@style/EnhancedSmartspaceTextTitle">
+        <item name="android:textSize">@dimen/enhanced_smartspace_subtitle_size</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="android:fontFamily">google-sans-text</item>
+        <item name="android:letterSpacing">@dimen/smartspaceLetterSpacing</item>
+        <item name="android:lineHeight">20sp</item>
+    </style>
+
+    <style name="EnhancedSmartspaceTextTitle" parent="@android:style/Theme.Material">
+        <item name="android:textSize">@dimen/enhanced_smartspace_title_size</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:drawablePadding">@dimen/enhanced_smartspace_icon_margin</item>
+        <item name="android:fontFamily">google-sans</item>
+        <item name="android:lineHeight">24sp</item>
+
+        <item name="ambientShadowBlur">@dimen/ambient_text_shadow_radius</item>
+        <item name="ambientShadowColor">?attr/workspaceAmbientShadowColor</item>
+        <item name="keyShadowBlur">@dimen/key_text_shadow_radius</item>
+        <item name="keyShadowColor">?attr/workspaceAmbientShadowColor</item>
+        <item name="keyShadowOffsetX">@dimen/key_text_shadow_dx</item>
+        <item name="keyShadowOffsetY">@dimen/key_text_shadow_dy</item>
+    </style>
 </resources>
